# iZiCodeEditor

./: .gitignore  Makefile  README.md  com.github.danielpinto8zz6.Easycode.json  main.vala  meson.build  terminal.plugin  terminal.vala  uncrustify.cfg  update_format.sh
data/: com.github.danielpinto8zz6.Easycode.appdata.xml.in  com.github.danielpinto8zz6.Easycode.desktop.in  com.github.danielpinto8zz6.Easycode.gschema.xml  com.github.danielpinto8zz6.iZiCodeEditor.gschema.xml  iZiCodeEditor.desktop  meson.build
po/: POTFILES  meson.build
src/: PluginsManager.vala  application.vala  apply.vala  bottombar.vala  comment.vala  constants.vala  dialogs.vala  document.vala  find.vala  goto.vala  headerbar.vala  iZiCodeEditor  leftbar.vala  main.vala  meson.build  notebook.vala  operations.vala  preferences.vala  project_browser.vala  replace.vala  rightbar.vala  search.vala  settings.vala  sourceview.vala  statusbar.vala  tabs.vala  terminal.vala  toolbar.vala  utils.vala  window.vala  zoom.vala
src/Explorer/: explorer.vala  folder.vala
src/FolderManager/: File.vala  FileItem.vala  FileView.vala  FolderItem.vala  Item.vala  MainFolderItem.vala
